package org.resources.modelo;

public class Categoria {
}
